Updates to chapter 1, 5, abstract, appendices

--- a/appendices/a.tables.tex
+++ b/appendices/a.tables.tex
@@ -2,6 +2,6 @@
 %	Appendix A
 %----------------------------------------------------------------------------------------
 \chapter{Tables}\label{app:tables}
-\lhead{\emph{Appendix A}} % Set the left side page header to "Introduction"
+\lhead{\emph{Appendix \ref{app:tables}: \nameref{app:tables}}}
 
 \todo{Write your Appendix content here, if needed.}
