--- a/appendices/b.surveys.tex
+++ b/appendices/b.surveys.tex
@@ -2,11 +2,11 @@
 %	Appendix B
 %----------------------------------------------------------------------------------------
 \chapter{Surveys}\label{app:surveys}
-\lhead{\emph{Appendix B}} % Set the left side page header to "Introduction"
+\lhead{\emph{Appendix \ref{app:surveys}: \nameref{app:surveys}}}
 
 %\todo{Write your Appendix content here, if needed.}
 
-\section{Questions for Practitioners at Ericsson}
+\section{Questions for Practitioners at the industrial partner}
 
 \begin{table}[]
 \centering
@@ -18,7 +18,7 @@
 \textbf{Nº} & \textbf{Question} \\
 \midrule
 \textbf{1} & \textbf{Roles \& education} \\
-\textbf{1.1} & What is your role at Ericsson and what are the main ways you interact with the regression testing suite? \\
+\textbf{1.1} & What is your role at the company and what are the main ways you interact with the regression testing suite? \\
 \textbf{1.2} & What is your education in testing? \\
 \midrule
 \textbf{2} & \textbf{Are these common pain points?} \\
@@ -56,6 +56,6 @@
 \textbf{4.8} & If I came to you saying ``I have this algorithm that would help your testing workflow'', what would be your reaction? \\
 \bottomrule
 \end{tabular}\\
-\caption{Interviewees at Ericsson.}
-\label{table:interviewees}
+\caption{List of questions asked during interviews.}
+\label{table:interview_questions}
 \end{table}
