Overall revision of document

--- a/appendices/b.surveys.tex
+++ b/appendices/b.surveys.tex
@@ -6,7 +6,14 @@
 
 %\todo{Write your Appendix content here, if needed.}
 
-\section{Questions for Practitioners at the industrial partner}
+\section{E-mail Template Sent to Authors of Surveyed Papers}
+\label{sec:app_email}
+
+\section{Questionnaire Sent to Practitioners During Literature Review}
+\label{sec:app_prac_questionnaire}
+
+\section{Questions for Practitioners at the Industrial Partner}
+\label{sec:app_ind_questions}
 
 \begin{table}[]
 \centering
@@ -21,7 +28,7 @@
 \textbf{1.1} & What is your role at the company and what are the main ways you interact with the regression testing suite? \\
 \textbf{1.2} & What is your education in testing? \\
 \midrule
-\textbf{2} & \textbf{Are these common pain points?} \\
+\textbf{2} & \textbf{Are these common issues when dealing with the test suite?} \\
 \textbf{2.1} & Correctly detecting failures (avoiding slips) \\
 \textbf{2.2} & Flaky (unreliable tests) \\
 \textbf{2.3} & Running time of the test suite \\
