--- a/tables/csv_approaches_algorithm.tex
+++ b/tables/csv_approaches_algorithm.tex
@@ -1,4 +1,4 @@
-\rowapproach{Similarity / distance-based}{\citetalias{noor_similarity-based_2016}, \citetalias{aman_application_2016}, \citetalias{busjaeger_learning_2016}, \citetalias{ouriques_test_2018}, \citetalias{haghighatkhah_test_2018}, \citetalias{miranda_fast_2018}, \citetalias{zhou_beating_2020}, \citetalias{greca_comparing_2022}}{}{\citetalias{cruciani_scalable_2019}}{}{Assesses test cases based on their similarity, with the objective of diversifying the suite.}
+\rowapproach{Similarity or distance-based}{\citetalias{noor_similarity-based_2016}, \citetalias{aman_application_2016}, \citetalias{busjaeger_learning_2016}, \citetalias{ouriques_test_2018}, \citetalias{haghighatkhah_test_2018}, \citetalias{miranda_fast_2018}, \citetalias{zhou_beating_2020}, \citetalias{greca_comparing_2022}}{}{\citetalias{cruciani_scalable_2019}}{}{Assesses test cases based on their similarity, with the objective of diversifying the suite.}
 \rowapproach{Search-based}{\citetalias{lu_how_2016}, \citetalias{wang_enhancing_2016}, \citetalias{correia_motsd_2019}, \citetalias{magalhaes_hsp_2020}, \citetalias{peng_empirically_2020}, \citetalias{zhou_parallel_2022}}{\citetalias{pradhan_search-based_2016}, \citetalias{magalhaes_automatic_2016}, \citetalias{garousi_multi-objective_2018}, \citetalias{correia_motsd_2019}, \citetalias{magalhaes_hsp_2020}, \citetalias{zarges_artificial_2021}}{\citetalias{chi_multi-level_2017}}{}{Utilizes search-based algorithms, such as genetic or nature-inspired ones}
 \rowapproach{Machine learning-based}{\citetalias{busjaeger_learning_2016}, \citetalias{spieker_reinforcement_2017}, \citetalias{wu_time_2019}, \citetalias{lima_multi-armed_2022}, \citetalias{bertolino_learning--rank_2020}, \citetalias{bagherzadeh_reinforcement_2022}, \citetalias{elsner_empirically_2021}, \citetalias{abdelkarim_tcp-net_2022}, \citetalias{yaraghi_scalable_2022}, \citetalias{omri_learning_2022}}{\citetalias{machalica_predictive_2018}, \citetalias{elsner_empirically_2021}, \citetalias{mehta_data-driven_2021}, \citetalias{zhang_comparing_2022}}{\citetalias{philip_fastlane:_2019}}{}{Trains a ML model using historical or other data. Includes supervised, unsupervised and reinforcement learning methods.}
 \rowapproach{Graph-based}{\citetalias{ouriques_test_2018}}{\citetalias{hirzel_graph-walk-based_2016}, \citetalias{ramler_tool_2017}, \citetalias{yilmaz_case_2018}, \citetalias{celik_regression_2018}, \citetalias{azizi_retest_2018}, \citetalias{bertolino_learning--rank_2020}}{}{}{Creates a graph representation of the SUT and utilizes graph theory algorithms to solve problems.}
