--- a/tables/tab_extraction.tex
+++ b/tables/tab_extraction.tex
@@ -11,7 +11,7 @@
 \centering
 \scriptsize
 \rowcolors{1}{}{gray!10}
-\begin{tabular}{lp{0.8\textwidth}}
+\begin{tabular}{p{0.2\textwidth}p{0.8\textwidth}}
 \toprule
 %\textbf{Data} & \textbf{Description}  \\ \midrule
 \rowextractionheader{Bibliographical data}{Basic information about the publication.}
@@ -28,7 +28,7 @@
 \rowextraction{\rt challenges}{Whether the paper covers \tcp, \tcs, \tsr, \tsa or a combination.}
 \rowextraction{Context}{The type of software targeted by the approach.}
 \midrule
-\rowextractionheader{Applicability concerns}{Properties of the paper related to its \rea.}
+\rowextractionheader{Applicability \mbox{concerns}}{Properties of the paper related to its \rea.}
 \midrule
 \rowextraction{Industry motivation}{Whether the paper is clearly motivated by an industrially relevant problem.}
 \rowextraction{Industry evaluation}{Whether the technique is evaluated in industrial software or sufficiently large-scale open-source projects.}
