--- a/tables/tab_metrics.tex
+++ b/tables/tab_metrics.tex
@@ -9,14 +9,14 @@
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{effectiveness_metrics.png}
+  \includegraphics[width=\linewidth]{figures/effectiveness_metrics.png}
   \caption{Distribution of effectiveness metrics.}
   \label{fig:effectiveness_metrics}
 \end{figure}
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{efficiency_other_metrics.png}
+  \includegraphics[width=\linewidth]{figures/efficiency_other_metrics.png}
   \caption{Distribution of (a) efficiency and (b) other metrics.}
   \label{fig:efficiency_metrics}
 \end{figure}
@@ -25,7 +25,7 @@
 \scriptsize
 \centering
 \setlength{\tabcolsep}{1,2mm}
-\begin{tabular}{p{23mm}p{18mm}p{18mm}p{8mm}p{3mm}p{55mm}}
+\begin{tabular}{p{23mm}p{18mm}p{18mm}p{8mm}p{8mm}p{60mm}}
 \toprule
 \textbf{Effectiveness} & 
 \textcolor{olive}{\textbf{\tcp}} & 
@@ -76,6 +76,8 @@
 \caption{Effectiveness, Efficiency and Other Metrics}	
 \label{table:other_metrics}
 \end{table}
+
+\setlength{\tabcolsep}{6pt}
 
 %\begin{table}[h]
 %\scriptsize
