--- a/tables/tab_related_basic.tex
+++ b/tables/tab_related_basic.tex
@@ -77,3 +77,5 @@ and the reported number of 49 primary studies includes the whole field.
 \label{table:related}
 \end{table}
 
+\setlength{\tabcolsep}{6pt}
+
