--- a/tables/tab_relevance.tex
+++ b/tables/tab_relevance.tex
@@ -89,3 +89,5 @@ A half-filled circle indicates a partially satisfied property. For example, a pa
 \caption{Relevance properties found in the papers.}
 \label{table:relevance}
 \end{table}
+
+\setlength{\tabcolsep}{6pt}
