--- a/tables/tab_approaches.tex
+++ b/tables/tab_approaches.tex
@@ -10,14 +10,14 @@
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{info_approach.png}
+  \includegraphics[width=\linewidth]{figures/info_approach.png}
   \caption{Distribution of information approaches.}
   \label{fig:info_approaches}
 \end{figure}
 
 \begin{figure}
   \center
-  \includegraphics[width=\linewidth]{alg_approach.png}
+  \includegraphics[width=\linewidth]{figures/alg_approach.png}
   \caption{Distribution of algorithm approaches.}
   \label{fig:alg_approaches}
 \end{figure}
@@ -30,7 +30,7 @@
 \scriptsize
 \centering
 \setlength{\tabcolsep}{1,2mm}
-\begin{tabular}{p{23mm}p{18mm}p{18mm}p{8mm}p{3mm}p{55mm}}
+\begin{tabular}{p{23mm}p{18mm}p{18mm}p{8mm}p{8mm}p{60mm}}
 \toprule
 \textbf{Information} & 
 \textcolor{olive}{\textbf{\tcp}} & 
@@ -67,6 +67,8 @@
 \caption{Information- and Algorithm-based Approaches}	
 \label{table:algo_approaches}
 \end{table}
+
+\setlength{\tabcolsep}{6pt}
 
 %\begin{table}[]
 %\scriptsize
