--- a/thesis.tex
+++ b/thesis.tex
@@ -2,7 +2,7 @@
 %	PACKAGES AND OTHER DOCUMENT CONFIGURATIONS
 %----------------------------------------------------------------------------------------
 
-\documentclass[11pt, a4paper, oneside]{Thesis} % Paper size, default font size and one-sided paper
+\documentclass[11pt, a4paper, twoside]{Thesis} % Paper size, default font size and one-sided paper
 
 \graphicspath{{./Pictures/}} % Specifies the directory where pictures are stored
 
@@ -50,7 +50,23 @@
 \usepackage{algorithm}
 \usepackage{algorithmicx}
 \usepackage[noend]{algpseudocode}
-%\usepackage[labeled,resetlabels]{multibib}
+\usepackage[resetlabels,labeled]{multibib}
+\usepackage{multirow}
+%\usepackage{bibentry}
+%\nobibliography*
+%\usepackage[left=1.4cm, right=1cm, top=0.6cm, bottom=0.8cm, paper=a4paper]{geometry}
+
+%\usepackage[left=1cm,right=2cm,vmargin=2.5cm,footnotesep=0.5cm]{geometry}
+%
+%\setmarginsrb  { 1.4in}  % left margin
+%                        { 0.6in}  % top margin
+%                        { 1.0in}  % right margin
+%                        { 0.8in}  % bottom margin
+%                        {  20pt}  % head height
+%                        {0.25in}  % head sep
+%                        {   9pt}  % foot height
+%                        { 0.3in}  % foot sep
+
 
 
 \newcommand{\ugh}[1]{\textcolor{red}{\uwave{#1}}} % please rephrase
@@ -68,7 +84,7 @@
 \newcommand{\rt}{RT\xspace}
 \newcommand{\rea}{IR\&A\xspace}
 \newcommand{\sut}{SUT\xspace}
-
+\newcommand{\slr}{SLR\xspace}
 
 \newcommand{\ek}{Ekstazi\xspace}
 \newcommand{\ekr}{Ekstazi\xspace}
@@ -83,9 +99,12 @@
 \newcommand{\ttff}{TTFF\xspace}
 \newcommand{\pttff}{TTFF\xspace}
 
+\newcommand{\rotatedheader}[2] {
+	\rotatebox[origin=c]{90}{\textbf{{\color{#1} #2}}}
+}
+
 \newcommand{\quoter}[2]{``\textit{#1}'' (#2)}
 \newcommand{\quotes}[1]{``\textit{#1}''}
-
 
 \newcommand{\assignedto}[1]{\textcolor{red}{\ding{46}~{\sf Assigned to:}~#1}\\}
 \newcommand{\todo}[1]{\textcolor{blue}{\ding{46}{\sf}~#1}}
@@ -111,11 +130,20 @@
 	\draw[fill] (0,0) circle (#1);  	
   \end{tikzpicture}} 
   
+%\geometry{%
+%    paper = a4paper,%
+%    top = 0.6in,%
+%    left = 1.4in,%
+%    right = 1.0 in, %
+%    bottom = 0.8in,%         <---- Changing this has no effect
+%    headsep = 0.25in%
+%}
+
   
 % Defining bibliographies
-%\newcites{P}{Papers related to this thesis}
+\newcites{P}{Papers produced during the development of this thesis}
 %\newcites{C}{Conferences related to this thesis}
-%\newcites{S}{Papers identified in the Systematic Literature Review}
+\newcites{S}{Papers identified in the Systematic Literature Review}
 %\newcites{Bibliography}{Bibliography}
 
 \input{tables/numpapers}
@@ -150,6 +178,8 @@
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
 %----------------------------------------------------------------------------------------
+
+%\newgeometry{left=1in}
 
 \begin{titlepage}
 \begin{center}
@@ -201,6 +231,10 @@ Prof. Breno \textsc{Miranda}
 \end{center}
 
 \end{titlepage}
+
+\cleardoublepage
+
+%\restoregeometry
 
 %----------------------------------------------------------------------------------------
 %	DECLARATION PAGE
@@ -283,7 +317,7 @@ Test suite orchestration strategies can be a step towards bridging the so-called
 To that end we propose a combined approach for regression testing, including techniques extracted from the literature that have promising qualities.
 This approach is an initial experiment with full test suite orchestration and extended approaches are also discussed.
 
-To get a closer understanding of the state of regression testing in a practical sense, a series of interviews were conducted in collaboration with a large technology company in Sweden.
+To get a closer understanding of the state of regression testing in a practical sense, a series of interviews were conducted in collaboration with a large technology company.
 During a seven-week process, we were able to interact with the team and learn the test practices performed on a daily basis and have some insight on the long-term test strategies for the company.
 The responses of the interviews are reported, edited for readability and confidentiality reasons, and these results are discussed within the larger context of the study.
 
@@ -304,7 +338,7 @@ a list of challenges that can serve as guidelines for researchers or even as res
 
 \paragraph{Conclusion:}
 There is still much work to be done by the software engineering research and development communities in order to completely close the gap that exists between them.
-To a great extent, the motivations of researchers and practitioners are not aligned — while in academia, proposing theoretically sound novel approaches is encouraged to obtain publications, while in industry there is a need for techniques that are proven to reduce effort and/or costs.
+To a great extent, the motivations of researchers and practitioners are not aligned — while in academia, proposing theoretically sound novel approaches is encouraged to obtain publications, in industry there is a need for techniques that are proven to reduce effort and/or costs.
 This can only be solved by close collaboration between the two sides, yet a question of who is willing to fund these experiments remain.
 The data and discussions provided in this thesis show that, although difficult, this is not an impossible problem to solve and there are certain clear steps that can be taken by researchers and practitioners alike to begin addressing it.
 
@@ -312,7 +346,20 @@ The data and discussions provided in this thesis show that, although difficult, 
 
 %In this research proposal, we discuss the reasons and challenges behind this disconnection, and propose the development of new test orchestration strategies that aim to combine relevant software testing techniques into a complete solution that can be applied by practitioners.
 %In order to help bring academia and industry closer together, we also propose the usage of applicability metrics that will be used to measure results of software testing techniques and compare how well each of them can perform in an industrial setting. 
-\clearpage % Start a new page
+\cleardoublepage % Start a new page
+
+%----------------------------------------------------------------------------------------
+%	DEDICATION
+%----------------------------------------------------------------------------------------
+
+\setstretch{1.3} % Return the line spacing back to 1.3
+
+\pagestyle{empty} % Page style needs to be empty for this page
+
+\dedicatory{In memory of Prof. Dr. Luiz Felipe Paula Soares\\ and Prof. Dr. Francisco de Paula Soares Filho} % Dedication text
+
+\addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
+
 
 %----------------------------------------------------------------------------------------
 %	ACKNOWLEDGEMENTS
@@ -327,11 +374,11 @@ The data and discussions provided in this thesis show that, although difficult, 
 I am incredibly grateful for the guidance and orientation provided by my advisors, professors Antonia Bertolino, Breno Miranda and Ludovico Iovino.
 I would also like to thank GSSI professors Luca Aceto and Michele Flammini, who have been supportive in times of need since my early days at the institute.
 
-Thanks to Milos Gligoric, who provided significant contributions to the discussions and results presented in \Cref{chap:orchestration}.
+Thanks to Milos Gligoric, from University of Texas at Austin, who provided significant contributions to the discussions and results presented in \Cref{chap:orchestration}.
 I also thank Sigrid Eldh, from M\"alardens Universitet, who arranged the collaboration that allows the discussion present in \Cref{chap:industry}.
-I am also grateful to the people at the company, who received me with grace and gave me the opportunity of interacting with their team, but who shall remain anonymous due to confidentiality concerns.
+I am also grateful to the people at the industrial partner, who received me with grace and gave me the opportunity of interacting with their team, but who shall remain anonymous due to confidentiality concerns.
 If you are reading this, you know who you are.
-%Carene Österberg and Tommie Haag, from Ericsson, who gave me the opportunity of interacting with them and their team in Sweden and without whom there would be no \Cref{chap:industry} in this thesis.
+%Carene Österberg and Tommie Haag, from Ericsson, who gave me the opportunity of interacting with them and their team and without whom there would be no \Cref{chap:industry} in this thesis.
 
 Thanks to my parents, Lizmari and Edison Greca, and my grandparents, Glacial and Aquiles Merlin, who gave me the foundational values and education that have guided me through life until this point.
 Additionally, I would like to remember my grandparents Berenice and Eros Greca, who I wish could be here to share their part in this achievement, and my uncles Felipe and Chico, who encouraged me to explore the world.
@@ -378,7 +425,7 @@ Even thousands of kilometers away, you are all special to me.
 \textbf{IR\&A}: \textbf{I}ndustrial \textbf{R}elevance and \textbf{A}pplicability \\
 \textbf{LIRT}: \textbf{L}ong \textbf{I}nterval \textbf{R}egression \textbf{T}est(ing) \\
 \textbf{MCT}: \textbf{M}ulti-\textbf{C}omponent \textbf{T}est(ing) \\
-\textbf{RAN}: \textbf{R}adio \textbf{A}rea \textbf{N}etwork \\
+%\textbf{RAN}: \textbf{R}adio \textbf{A}rea \textbf{N}etwork \\
 \textbf{RT}: \textbf{R}egression \textbf{T}esting \\
 %\textbf{SBT}: \textbf{S}ource \textbf{B}aseline \textbf{T}est \\\
 \textbf{SIRT}: \textbf{S}hort \textbf{I}nterval \textbf{R}egression \textbf{T}est(ing) \\
@@ -458,18 +505,6 @@ Even thousands of kilometers away, you are all special to me.
 %}
 
 %----------------------------------------------------------------------------------------
-%	DEDICATION
-%----------------------------------------------------------------------------------------
-
-\setstretch{1.3} % Return the line spacing back to 1.3
-
-\pagestyle{empty} % Page style needs to be empty for this page
-
-\dedicatory{In memory of Prof. Dr. Luiz Felipe Paula Soares\\ and Prof. Dr. Francisco de Paula Soares Filho} % Dedication text
-
-\addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
-
-%----------------------------------------------------------------------------------------
 %	THESIS CONTENT - CHAPTERS
 %----------------------------------------------------------------------------------------
 
@@ -539,18 +574,16 @@ Even thousands of kilometers away, you are all special to me.
 
 \lhead{\emph{Bibliography}} % Change the page header to say "Bibliography"
 
-%\bibliographystyleP{unsrtnat}
-%\bibliography{production.bib}
-
-%\nociteP{greca_comparing_2022}
+\bibliographystyleP{unsrtnat}
+\bibliographyP{production.bib}
 
 %\bibliographystyleS{unsrtnat}
-%\bibliography{slr.bib}
+%\bibliographyS{slr.bib}
 
 %\input{bibliographies/nociteS.tex}
 
 \bibliographystyle{unsrtnat} % Use the "unsrtnat" BibTeX style for formatting the Bibliography
-\bibliography{bibliography.bib} % The references (bibliography) information are stored in the file named "Bibliography.bib"
-%\bibliography{bibliographies/secondaries.bib}
+\bibliography{secondaries.bib,bibliography.bib,production.bib,slr.bib} % This contains only the 
+%\bibliography{}
 
 \end{document}
