--- a/thesis.tex
+++ b/thesis.tex
@@ -544,7 +544,7 @@ Even thousands of kilometers away, you are all special to me.
 %% Uncomment the lines as you write the Appendices
 
 %\lhead{\emph{Appendix A}} % Set the left side page header to "Appendix A"
-\input{./appendices/a.tables}
+%\input{./appendices/a.tables}
 \input{./appendices/b.surveys}
 
 \addtocontents{toc}{\vspace{2em}} % Add a gap in the Contents, for aesthetics
